Added base html

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,27 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Анализ нового текста";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="row">
+    <div class="col-6 text-center">
+        <button class="btn btn-info col-10">Анализ нового текста</button>
+    </div>
+    <div class="col-6 text-center">
+        <button class="btn btn-info pt-2 col-10">Выбрать уже готовый текст</button>
+    </div>
+</div>
+<div>
+    <h4 class="pt-3">
+        Анализ нового текста
+    </h4>
+
+    <textarea placeholder="Введите текст" class="col-12" style="height: 40vh"></textarea>
+
+    <div class="col-12" style="text-align: center !important;">
+        <button class="btn btn-success pt-2 col-4">Анализировать</button>
+    </div>
+
+    <div class="col-12 pt-2" style="text-align: center !important;">
+        <i>Анализ текста запущен, id текста: 155</i>
+    </div>
 </div>
