--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,8 +10,8 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" style="padding-left: 25%">
+            <div class="container" style="padding-left: 20%">
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
                     Синтаксический и морфологический анализатор текста
                 </a>
             </div>
